// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Windows should render for default values 1`] = `
<div>
  <div
    class="react-draggable react-resizable"
    style="transition: all 0s; transform: translate(0px, 28px)translate(0px,0px); width: 700px; height: 500px;"
  >
    <div
      class="css-exz6no"
    >
      <div
        class="handle css-1q7gku6"
      >
        <div
          aria-label="close"
          class="css-apaxy7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            x
          </p>
        </div>
        <div
          aria-label="minimize"
          class="css-1oliyf7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            -
          </p>
        </div>
        <div
          aria-label="maximize"
          class="css-18q4sxm"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            o
          </p>
        </div>
        <div
          class="css-1bc9bee"
        />
      </div>
      <div
        class="css-1qx9vnh"
      >
        <div>
          Test
        </div>
      </div>
    </div>
    <span
      class="react-resizable-handle react-resizable-handle-se"
    />
  </div>
</div>
`;

exports[`Windows should render with top bar component values 1`] = `
<div>
  <div
    class="react-draggable react-resizable"
    style="transition: all 0s; transform: translate(0px, 28px)translate(0px,0px); width: 700px; height: 500px;"
  >
    <div
      class="css-exz6no"
    >
      <div
        class="handle css-1q7gku6"
      >
        <div
          aria-label="close"
          class="css-apaxy7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            x
          </p>
        </div>
        <div
          aria-label="minimize"
          class="css-1oliyf7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            -
          </p>
        </div>
        <div
          aria-label="maximize"
          class="css-18q4sxm"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            o
          </p>
        </div>
        <div
          class="css-1bc9bee"
        >
          <div>
            Top bar
          </div>
        </div>
      </div>
      <div
        class="css-1qx9vnh"
      >
        <div>
          Test
        </div>
      </div>
    </div>
    <span
      class="react-resizable-handle react-resizable-handle-se"
    />
  </div>
</div>
`;

exports[`Windows should trigger close on close button press 1`] = `
<div>
  <div
    class="react-draggable react-resizable"
    style="transition: all 0s; transform: translate(0px, 28px)translate(0px,0px); width: 700px; height: 500px;"
  >
    <div
      class="css-exz6no"
    >
      <div
        class="handle css-1q7gku6"
      >
        <div
          aria-label="close"
          class="css-apaxy7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            x
          </p>
        </div>
        <div
          aria-label="minimize"
          class="css-1oliyf7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            -
          </p>
        </div>
        <div
          aria-label="maximize"
          class="css-18q4sxm"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            o
          </p>
        </div>
        <div
          class="css-1bc9bee"
        />
      </div>
      <div
        class="css-1qx9vnh"
      >
        <div>
          Test
        </div>
      </div>
    </div>
    <span
      class="react-resizable-handle react-resizable-handle-se"
    />
  </div>
</div>
`;

exports[`Windows should trigger maximize on maximize button press 1`] = `
<div>
  <div
    class="react-draggable react-resizable"
    style="transition: all 0s; transform: translate(0px, 28px)translate(0px,0px); width: 700px; height: 500px;"
  >
    <div
      class="css-exz6no"
    >
      <div
        class="handle css-1q7gku6"
      >
        <div
          aria-label="close"
          class="css-apaxy7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            x
          </p>
        </div>
        <div
          aria-label="minimize"
          class="css-1oliyf7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            -
          </p>
        </div>
        <div
          aria-label="maximize"
          class="css-18q4sxm"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            o
          </p>
        </div>
        <div
          class="css-1bc9bee"
        />
      </div>
      <div
        class="css-1qx9vnh"
      >
        <div>
          Test
        </div>
      </div>
    </div>
    <span
      class="react-resizable-handle react-resizable-handle-se"
    />
  </div>
</div>
`;

exports[`Windows should trigger minimize on minimize button press 1`] = `
<div>
  <div
    class="react-draggable react-resizable"
    style="transition: all 0s; transform: translate(0px, 28px)translate(0px,0px); width: 700px; height: 500px;"
  >
    <div
      class="css-exz6no"
    >
      <div
        class="handle css-1q7gku6"
      >
        <div
          aria-label="close"
          class="css-apaxy7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            x
          </p>
        </div>
        <div
          aria-label="minimize"
          class="css-1oliyf7"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            -
          </p>
        </div>
        <div
          aria-label="maximize"
          class="css-18q4sxm"
        >
          <p
            class="chakra-text css-1r0gc73"
          >
            o
          </p>
        </div>
        <div
          class="css-1bc9bee"
        />
      </div>
      <div
        class="css-1qx9vnh"
      >
        <div>
          Test
        </div>
      </div>
    </div>
    <span
      class="react-resizable-handle react-resizable-handle-se"
    />
  </div>
</div>
`;
